fixed issue with navbar text color on mobile

--- a/2024/css/style.css
+++ b/2024/css/style.css
@@ -28,10 +28,12 @@
   background-repeat: no-repeat;
 }
 
-.navbar-item {
-  color: #FFFFFF;
+@media screen and (min-width: 1024px) {
+  .navbar-item {
+    color: #FFFFFF;
+  }
 }
 
 .has-shadow {
-  text-shadow: 0 0 7px #555555;
+  text-shadow: 0 0 5px #777777;
 }
